2008-02-09  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine2.*: Removed old files. Added
	Marcus and me to the copyright header.
	
	* libavogadro/src/engines/surfaceengine.*: Added settings widget.
	
	* libavogadro/src/engines/CMakeList.txt: Added settings widget.

	* libavogadro/src/engines/surfacesettingswidget.ui: Settings widget.
	

2008-02-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/clickmeasuretool.*: Added support for
	measuring the dihedral angle. Also made the tool update dynamically as
	the molecule is changed, optimised the label placement and ported it
	to use the OpenBabel functions to find the angles concerned.

2008-02-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/clickmeasuretool.cpp: Fix a bug where the
	angle was not calculated correctly. Thanks to Albert DeFusco for
	reporting the bug and providing a test case.

2008-01-09  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extensions/conformersearchdialog.cpp: Make use of new
	OpenBabel::OBRotorKeys class to determine the number of conformers
	generated with the Systematic rotor search.

	* avogadro/src/extensions/constraints*: Renamed BondConstraint to
	DistanceConstraint (latest OpenBabel needed, sorry for the
	inconvenience)

2007-12-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/autoopt.[h,cpp]: Use new
	HasAnalyticalGradients() method from Open Babel SVN trunk.

2007-12-19  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fix the race condition in the render
	quick code.

	* libavogadro/src/camera.*: Added a copy constructor.

2007-12-18  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Add support for molecular
	dynamics. This should probably move to it's own tool, where you can
	record and play trajectories.

2007-12-17  Geoffrey Hutchison  <babel@geoffhutchison.net>
