@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>221</height>
+    <height>256</height>
    </rect>
   </property>
   <layout class="QGridLayout" >
@@ -54,7 +54,7 @@
    <item row="1" column="0" >
     <widget class="QLabel" name="renderLabel" >
      <property name="text" >
-      <string>Render</string>
+      <string>Render:</string>
      </property>
     </widget>
    </item>
@@ -80,7 +80,7 @@
    <item row="2" column="0" >
     <widget class="QLabel" name="stepSizeLabel" >
      <property name="text" >
-      <string>Step Size</string>
+      <string>Step Size:</string>
      </property>
     </widget>
    </item>
@@ -106,7 +106,7 @@
    <item row="3" column="0" >
     <widget class="QLabel" name="paddingLabel" >
      <property name="text" >
-      <string>Padding</string>
+      <string>Padding:</string>
      </property>
     </widget>
    </item>
@@ -126,7 +126,7 @@
    <item row="4" column="0" >
     <widget class="QLabel" name="colorLabel" >
      <property name="text" >
-      <string>Color</string>
+      <string>Color:</string>
      </property>
     </widget>
    </item>
@@ -134,7 +134,7 @@
     <widget class="QComboBox" name="colorCombo" >
      <item>
       <property name="text" >
-       <string>RGB</string>
+       <string>Custom Color</string>
       </property>
      </item>
      <item>
@@ -144,59 +144,35 @@
      </item>
     </widget>
    </item>
+   <item row="6" column="1" >
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="5" column="0" >
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>Custom Color:</string>
+     </property>
+    </widget>
+   </item>
    <item row="5" column="1" >
     <layout class="QHBoxLayout" >
      <item>
-      <widget class="QLabel" name="RLabel" >
-       <property name="text" >
-        <string>R</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QDoubleSpinBox" name="RSpin" >
-       <property name="maximum" >
-        <double>1.000000000000000</double>
-       </property>
-       <property name="singleStep" >
-        <double>0.100000000000000</double>
-       </property>
-       <property name="value" >
-        <double>1.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="GLabel" >
-       <property name="text" >
-        <string>G</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QDoubleSpinBox" name="GSpin" >
-       <property name="maximum" >
-        <double>1.000000000000000</double>
-       </property>
-       <property name="singleStep" >
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="BLabel" >
-       <property name="text" >
-        <string>B</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QDoubleSpinBox" name="BSpin" >
-       <property name="maximum" >
-        <double>1.000000000000000</double>
-       </property>
-       <property name="singleStep" >
-        <double>0.100000000000000</double>
+      <widget class="ColorButton" native="1" name="customColorButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>36</width>
+         <height>21</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -215,21 +191,16 @@
      </item>
     </layout>
    </item>
-   <item row="6" column="1" >
-    <spacer>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" >
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ColorButton</class>
+   <extends>QWidget</extends>
+   <header location="global" >avogadro/colorbutton.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
